2009-01-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Ops.R (Ops.x.x): fix for new "inherited method" dispatch

2009-01-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spqr.R: put spqr() / class "SPQR" related code in one file for now.
	* NAMESPACE: export "SPQR" class
	* man/SPQR-class.Rd: document it

2009-01-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (is.na_nsp): should produce "nsCMatrix" only when
	dimnames are symmetric too.

	* R/sparseQR.R (solve): method for (<sparseQR>, <ANY>)

2009-01-26  Douglas Bates <bates@stat.wisc.edu>

	* src/cs_utils.c (Matrix_as_cs): fix needed in diagU2N case

2009-01-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Tsparse.R (intI): for now give intelligible error on NA indices.

	* R/Matrix.R (subset.ij): should deal correctly with NA indices in
	the 2-column-matrix index case.

	* src/Mutils.c (m_encodeInd, m_encodeInd2): prepare to deal better
	with NA in indices.

2009-01-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* inst/doc/Intro2Matrix.Rnw: mention sparseMatrix
	* man/sparseMatrix.Rd: fix typos found by parse_Rd

2009-01-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version,Date): release 0.999375-18 (as of yesterday)

2009-01-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (sparseMatrix): recycle 'x' if necessary;
	use 'index1' rather than 'index0' {as proposed by Doug}.

	* R/dgeMatrix.R: drop two unnecessary (maybe very very slightly
	faster) methods for %*%.

2009-01-12  Douglas Bates <bates@stat.wisc.edu>

	* [r2313] R/sparseMatrix.R, man/sparseMatrix.rd: Use intermediate
	triplet rep in sparseMatrix.

2009-01-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (sparseMatrix): new function to be used in
	place of new(), notably for CsparseMatrix objects.
	* man/sparseMatrix.Rd: its doc; plus examples

	* man/CsparseMatrix-class.Rd: fix long-standing thinko; update the